--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,7 @@
 {
     "JavaScript": false,
     "Logging": false,
+    "LoggingErrors": false,
     "Proxy": false,
     "ProxyLists": [
         "socks5://127.0.0.1:8080",
