--- a/settings.json
+++ b/settings.json
@@ -15,6 +15,10 @@
 	"LogLevel": [
 		"Info"
 	],
+	"UserAgent": false,
+	"UserAgentLists": [
+		"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/86.0.4240.111 Safari/537.36"
+	],
 	"Export": true,
 	"ExportType": [
 		"Json"
