--- a/settings.json
+++ b/settings.json
@@ -1,11 +1,7 @@
 [
     {
-        "Log": {
-            "LogLevel": "Info"
-        },
-        "JavaScript": {
-            "Engine": "Chromium"
-        },
+        "Log": "Info",
+        "JavaScript": "Chromium",
         "UserAgent": [
             "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/86.0.4240.111 Safari/537.36"
         ],
@@ -15,8 +11,6 @@
         "Proxy": [
                 "socks5://127.0.0.1:8080"
         ],
-        "Export": {
-            "Type": "Json"
-        }
+        "Export": "Json"
     }
 ]
