--- a/settings.json
+++ b/settings.json
@@ -5,9 +5,7 @@
         "UserAgent": [
             "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/86.0.4240.111 Safari/537.36"
         ],
-        "Captcha": {
-            "GoogleCloudSpeech": "YOUR_API_KEY"
-        },
+        "Captcha": "YOUR_API_KEY",
         "Proxy": [
                 "socks5://127.0.0.1:8080"
         ],
