--- a/settings.json
+++ b/settings.json
@@ -1,14 +1,12 @@
-[
     {
-        "Log": "Info",
-        "JavaScript": "Chromium",
-        "UserAgent": [
-            "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/86.0.4240.111 Safari/537.36"
-        ],
-        "Captcha": "YOUR_API_KEY",
+        "Log": false,
+        "JavaScript": false,
+        "Captcha": false,
+        "Export": "Json",
         "Proxy": [
-                "socks5://127.0.0.1:8080"
+            false
         ],
-        "Export": "Json"
+        "UserAgent": [
+            false
+        ]
     }
-]
