--- a/settings.json
+++ b/settings.json
@@ -2,7 +2,8 @@
   "Log": false,
   "JavaScript": false,
   "Captcha": false,
-  "Export": "Json",
+  "Workers": 10,
+  "Export": "output.json",
   "Proxy": [
     false
   ]
