--- a/settings.json
+++ b/settings.json
@@ -2,6 +2,8 @@
   "Log": false,
   "JavaScript": false,
   "Captcha": false,
+  "Workers": 10,
+  "Export": "output.json",
   "Proxy": [
     false
   ]
