--- a/settings.json
+++ b/settings.json
@@ -6,5 +6,7 @@
   "Workers": 10,
   "Captcha": [],
   "Proxy": [],
-  "UserAgent": []
+  "UserAgent": [
+    "Mozilla/5.0 (X11; CrOS x86_64 13421.73.0) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/86.0.4240.112 Safari/537.36"
+  ]
 }
