--- a/settings.json
+++ b/settings.json
@@ -1,12 +1,8 @@
 {
-  "Log": true,
+  "Log": false,
   "JavaScript": false,
   "Workers": 25,
-  "UserAgents": [
-    "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/86.0.4240.183 Safari/537.36",
-    "Mozilla/5.0 (X11; CrOS x86_64 13421.73.0) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/86.0.4240.112 Safari/537.36",
-    "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/86.0.4240.183 Safari/537.36"
-  ],
+  "UserAgents": [],
   "Captcha": [],
   "Proxy": []
 }
