--- a/settings.json
+++ b/settings.json
@@ -4,9 +4,7 @@
   "JavaScript": false,
   "Workers": 10,
   "Export": "JSON",
-  "UserAgents": [
-    "Mozilla/5.0 (X11; CrOS x86_64 13421.73.0) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/86.0.4240.112 Safari/537.36"
-  ],
+  "UserAgents": [],
   "Captcha": [],
   "Proxy": []
 }
