--- a/settings.json
+++ b/settings.json
@@ -1,10 +1,41 @@
 {
-  "Gui": false,
-  "Log": false,
-  "JavaScript": false,
-  "Workers": 10,
-  "Export": "",
-  "UserAgents": [],
-  "Captcha": "",
-  "Proxy": []
+  "Settings": {
+    "Gui": true,
+    "Log": false,
+    "JavaScript": false,
+    "Workers": 10,
+    "Export": "json",
+    "UserAgents": [],
+    "Captcha": "",
+    "Proxy": []
+  },
+  "sitemap": {
+    "_id": "www.prajwalkoirala.com",
+    "startUrl": [
+      "https://www.prajwalkoirala.com"
+    ],
+    "selectors": [
+      {
+        "id": "name",
+        "type": "SelectorText",
+        "parentSelectors": [
+          "_root"
+        ],
+        "selector": "h1",
+        "multiple": false,
+        "regex": "",
+        "delay": 0
+      },
+      {
+        "id": "picture",
+        "type": "SelectorImage",
+        "parentSelectors": [
+          "_root"
+        ],
+        "selector": "img",
+        "multiple": false,
+        "delay": 0
+      }
+    ]
+  }
 }
