--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,7 @@
 {
   "Settings": {
     "Gui": true,
-    "Log": false,
+    "Log": true,
     "JavaScript": false,
     "Workers": 10,
     "Export": "json",
