--- a/.github/workflows/analysis.yml
+++ b/.github/workflows/analysis.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 jobs:
   build:
     name: Build
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Set up Go 1.15
         uses: actions/setup-go@v1
